--- a/products/templates/product_details.html
+++ b/products/templates/product_details.html
@@ -3,7 +3,7 @@
 <html lang="en">
     {% include 'baseheader.html' %}
 
-    {% block homepage %}
+    {% block product_details %}
     <body>
     <!-- HEADER -->
     {% include 'initial_page_header.html' %}
@@ -11,18 +11,6 @@
     <!-- NAVIGATION -->
     {% include 'initial_page_navigation.html' %}
     <!-- /NAVIGATION -->
-
-    <!-- section -->
-    {% include 'homepage_section_1.html' %}
-    <!-- section -->
-
-    <!-- section -->
-    {% include 'homepage_section_2.html' %}
-    <!-- section -->
-
-    <!-- section -->
-    {% include 'homepage_section_3.html' %}
-    <!-- section -->
 
     <!--footer -->
     {% include 'homepage_footer.html' %}
