--- a/products/templates/homepage_section_1.html
+++ b/products/templates/homepage_section_1.html
@@ -65,7 +65,7 @@
 
 
                                 <h2 class="product-name"> <a href = "{% url 'product_details' %}" >{{ product.productname}}</a></h2>
-                                <h2 class="shop-name"><a href="shop_welcome_page.html">Shop Name</a></h2>
+                                <h2 class="shop-name"><a href="#">Shop Name</a></h2>
                                 <div class="product-btns">
                                     <button class="main-btn icon-btn"><i class="fa fa-heart"></i></button>
                                     <button class="main-btn icon-btn"><i class="fa fa-exchange"></i></button>
