--- a/products/templates/homepage_header.html
+++ b/products/templates/homepage_header.html
@@ -12,7 +12,7 @@
             </div>
             <div class="pull-right">
                 <ul class="header-top-links">
-                    <li><a href="{% url 'advanced_search' %}">Advanced Search</a></li>
+                    <li><a href="{% url 'advanced_search' 10 0 %}">Advanced Search</a></li>
                     <li><a href="#">FAQ</a></li>
 
                 </ul>
