--- a/products/templates/advanced_search.html
+++ b/products/templates/advanced_search.html
@@ -32,81 +32,58 @@
         <!-- row -->
         <div class="row">
             <!-- ASIDE -->
-            <div id="aside" class="col-md-3">
-                <!-- aside widget -->
-                <div class="aside">
-                    <h3 class="aside-title">Shop by:</h3>
+            <form class="" action="{% url 'advanced_search' %}" method="get">
 
-                    <ul class="filter-list">
-                        <li><span class="text-uppercase">Price:</span></li>
-                        <li><a href="#">MIN: $20.00</a></li>
-                        <li><a href="#">MAX: $120.00</a></li>
-                    </ul>
-
-                    <ul class="filter-list">
-                        <li><span class="text-uppercase">Gender:</span></li>
-                        <li><a href="#">Men</a></li>
-                    </ul>
-
-                    <button class="primary-btn">Clear All</button>
-                </div>
-                <!-- /aside widget -->
-
-                <!-- aside widget -->
-                <div class="aside">
-                    <h3 class="aside-title">Filter by Price</h3>
-                    <div id="price-slider"></div>
-                </div>
-                <!-- aside widget -->
-
-                <!-- aside widget -->
-                <div class="aside">
-                    <h3 class="aside-title">Filter by Location</h3>
-                    <div id="location-slider"></div>
-                </div>
-                <!-- aside widget -->
+                <div id="aside" class="col-md-3">
+                    <!-- aside widget -->
 
 
-                <!-- /aside widget -->
+                    <!-- aside widget -->
+                    <div class="aside">
+                        <h3 class="aside-title">Filter by Price</h3>
+                        <div class="input-field">
+                            <h6 class="title"> Min</h6>  <input id="price-filter" name="min-price-filter"
+                                                                      type="text"> <br> <br>
+                        </div>
+                        <div class="input-field">
+                            <h6 class="title"> Max</h6>  <input id="price-filter" name="max-price-filter"
+                                                                      type="text">
+                        </div>
+                    </div>
+                    <!-- aside widget -->
 
-                <!-- aside widget -->
-                <div class="aside">
-                    <h3 class="aside-title">Filter by Brand</h3>
-                    <ul class="list-links">
-                        <li><a href="#">Nike</a></li>
-                        <li><a href="#">Adidas</a></li>
-                        <li><a href="#">Polo</a></li>
-                        <li><a href="#">Lacost</a></li>
-                    </ul>
-                </div>
-                <!-- /aside widget -->
-
-                <!-- aside widget -->
-                <div class="aside">
-                    <h3 class="aside-title">Filter by Gender</h3>
-                    <ul class="list-links">
-                        <li class="active"><a href="#">Men</a></li>
-                        <li><a href="#">Women</a></li>
-                    </ul>
-                </div>
-                <!-- /aside widget -->
-
-            </div>
-            <!-- /ASIDE -->
-
-            <!-- MAIN -->
-            <div id="main" class="col-md-9">
-                <!-- store top filter -->
-                <div class="store-filter clearfix">
-                    <form class="" action="{% url 'advanced_search' %}" method="get">
-
-                    <div class="pull-left">
-                        <div class="row-filter">
-                            <a href="#"> hi <i class="fa fa-th-large"></i></a>
-                            <a href="#" class="active"><i class="fa fa-bars"></i></a>
+                    <!-- aside widget -->
+                    <div class="aside">
+                        <h3 class="aside-title">Filter by Location</h3>
+                        <div class="input-field">
+                            <h6 class="title">Distance</h6>  <input id="location-filter" name="location-filter"
+                                                                      type="text"> <b> km </b> <br> <br>
                         </div>
 
+                    </div>
+                    <!-- aside widget -->
+
+
+                    <!-- /aside widget -->
+
+                    <!-- /aside widget -->
+
+                </div>
+                <!-- /ASIDE -->
+
+                <!-- MAIN -->
+                <div id="main" class="col-md-9">
+                    <!-- store top filter -->
+                    <div class="store-filter clearfix">
+
+                        <div class="pull-left">
+                            <div class="row-filter">
+                                <a href="#"><i class="fa fa-th-large"></i></a>
+                                <a href="#" class="active"><i class="fa fa-bars"></i></a>
+                            </div>
+
                             <div class="sort-filter">
+
                                 <span class="text-uppercase">Sort By:</span>
                                 <select class="input" id="id_sort" name="id_sort">
                                     <option value=0>Position</option>
@@ -115,113 +92,118 @@
                                 </select>
 
                             </div>
+                            <button id="submit">Submit </button>
 
-                    </div>
-                    <div class="pull-right">
-                        <div class="page-filter">
-                            <span class="text-uppercase">Show:</span>
-
-                            <select class="input" id="n_products" name="n_products">
-                                <option value="10">10</option>
-                                <option value="20">20</option>
-                                <option value="30">30</option>
-                            </select>
 
                         </div>
-                        <button id="submit">Submit {{ products_one_page }}</button>
-                        <ul class="store-pages">
-                            <li><span class="text-uppercase">Page:</span></li>
-                            <li class="active">1</li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li><a href="#"><i class="fa fa-caret-right"></i></a></li>
-                        </ul>
+                        <div class="pull-right">
+                            <div class="page-filter">
+                                <span class="text-uppercase">Show:</span>
+
+                                <select class="input" id="n_products" name="n_products">
+                                    <option value="10">10</option>
+                                    <option value="20">20</option>
+                                    <option value="30">30</option>
+                                </select>
+
+                            </div>
+                            <ul class="store-pages">
+                                <li><span class="text-uppercase">Page:</span></li>
+                                <li class="active">1</li>
+                                <li><a href="#">2</a></li>
+                                <li><a href="#">3</a></li>
+                                <li><a href="#"><i class="fa fa-caret-right"></i></a></li>
+                            </ul>
+                        </div>
+
+
                     </div>
-                    </form>
+                    <!-- /store top filter -->
 
-                </div>
-                <!-- /store top filter -->
+                    <!-- STORE -->
+                    <div id="store">
+                        <!-- row -->
+                        <div class="row">
+                            <!-- Product Single -->
+                            {% for product in products_list %}
 
-                <!-- STORE -->
-                <div id="store">
-                    <!-- row -->
-                    <div class="row">
-                        <!-- Product Single -->
-                        {% for product in products_list %}
-
-                            {% if forloop.counter <= products_one_page|getval  %}
-                                <div class="col-md-4 col-sm-6 col-xs-6">
-                                    <div class="product product-single">
-                                        <div class="product-thumb">
-                                            {% if product.image %}
-                                                <img src="{{ product.image.url }}" alt="">
-                                            {% endif %}
-                                        </div>
-                                        <div class="product-body">
-                                            <h3 class="product-price">{{ product.price }}</h3>
-                                            <div class="product-rating">
-                                                {% for i in product.rating|getrange:0 %}
-                                                    <i class="fa fa-star"></i>
-                                                {% endfor %}
-
-                                                {% for i in product.rating|getrange:5 %}
-                                                    <i class="fa fa-star-o empty"></i>
-                                                {% endfor %}
-
+                                {% if forloop.counter <= products_one_page|getval %}
+                                    <div class="col-md-4 col-sm-6 col-xs-6">
+                                        <div class="product product-single">
+                                            <div class="product-thumb">
+                                                {% if product.image %}
+                                                    <img src="{{ product.image.url }}" alt="">
+                                                {% endif %}
                                             </div>
-                                            <h2 class="product-name"><a href="#">{{ product.productname }}</a></h2>
-                                            <div class="product-btns">
-                                                <button class="main-btn icon-btn"><i class="fa fa-heart"></i></button>
-                                                <button class="main-btn icon-btn"><i class="fa fa-exchange"></i>
-                                                </button>
-                                                <button class="primary-btn add-to-cart"><i
-                                                        class="fa fa-shopping-cart"></i>
-                                                    Add to
-                                                    Cart
-                                                </button>
+                                            <div class="product-body">
+                                                <h3 class="product-price">{{ product.price }}</h3>
+                                                <div class="product-rating">
+                                                    {% for i in product.rating|getrange:0 %}
+                                                        <i class="fa fa-star"></i>
+                                                    {% endfor %}
+
+                                                    {% for i in product.rating|getrange:5 %}
+                                                        <i class="fa fa-star-o empty"></i>
+                                                    {% endfor %}
+
+                                                </div>
+                                                <h2 class="product-name"><a href="#">{{ product.productname }}</a></h2>
+                                                <div class="product-btns">
+                                                    <button class="main-btn icon-btn"><i class="fa fa-heart"></i>
+                                                    </button>
+                                                    <button class="main-btn icon-btn"><i class="fa fa-exchange"></i>
+                                                    </button>
+                                                    <button class="primary-btn add-to-cart"><i
+                                                            class="fa fa-shopping-cart"></i>
+                                                        Add to
+                                                        Cart
+                                                    </button>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
-                                </div>
-                                <!-- /Product Single -->
-                            {% endif %}
-                        {% endfor %}
+                                    <!-- /Product Single -->
+                                {% endif %}
+                            {% endfor %}
+                        </div>
+                        <!-- /row -->
                     </div>
-                    <!-- /row -->
+                    <!-- /STORE -->
+                    <div class="row-filter">
+                        <a href="#"><i class="fa fa-th-large"></i></a>
+                        <a href="#" class="active"><i class="fa fa-bars"></i></a>
+                    </div>
+                    <div class="sort-filter">
+                        <span class="text-uppercase">Sort By:</span>
+                        <select class="input">
+                            <option value="0">Position</option>
+                            <option value="0">Price</option>
+                            <option value="0">Rating</option>
+                        </select>
+                        <a href="#" class="main-btn icon-btn"><i class="fa fa-arrow-down"></i></a>
+                    </div>
                 </div>
-                <!-- /STORE -->
-                <div class="row-filter">
-                    <a href="#"><i class="fa fa-th-large"></i></a>
-                    <a href="#" class="active"><i class="fa fa-bars"></i></a>
-                </div>
-                <div class="sort-filter">
-                    <span class="text-uppercase">Sort By:</span>
-                    <select class="input">
-                        <option value="0">Position</option>
-                        <option value="0">Price</option>
-                        <option value="0">Rating</option>
-                    </select>
-                    <a href="#" class="main-btn icon-btn"><i class="fa fa-arrow-down"></i></a>
-                </div>
-            </div>
 
-            <div class="pull-right">
-                <div class="page-filter">
-                    <span class="text-uppercase">Show:</span>
-                    <select class="input">
-                        <option value="0">10</option>
-                        <option value="1">20</option>
-                        <option value="2">30</option>
-                    </select>
+                <div class="pull-right">
+                    <div class="page-filter">
+                        <span class="text-uppercase">Show:</span>
+                        <select class="input">
+                            <option value="0">10</option>
+                            <option value="1">20</option>
+                            <option value="2">30</option>
+                        </select>
+                    </div>
+                    <ul class="store-pages">
+                        <li><span class="text-uppercase">Page:</span></li>
+                        <li class="active">1</li>
+                        <li><a href="#">2</a></li>
+                        <li><a href="#">3</a></li>
+                        <li><a href="#"><i class="fa fa-caret-right"></i></a></li>
+                    </ul>
                 </div>
-                <ul class="store-pages">
-                    <li><span class="text-uppercase">Page:</span></li>
-                    <li class="active">1</li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#"><i class="fa fa-caret-right"></i></a></li>
-                </ul>
-            </div>
+
+            </form>
+
         </div>
         <!-- /store bottom filter -->
     </div>
