--- a/products/templates/homepage_navigation.html
+++ b/products/templates/homepage_navigation.html
@@ -11,7 +11,7 @@
             <div class="menu-nav">
                 <span class="menu-header">Menu <i class="fa fa-bars"></i></span>
                 <ul class="menu-list">
-                    <li><a href="#">Home</a></li>
+                    <li><a href={% url 'initial_page' %}>Home</a></li>
                     {% for i in products_list|getcategory:"All Categories" %}
                         <li><a href="#">{{i}}</a></li>
 
