stage 2 to ajax

--- a/products/templates/advanced_search.html
+++ b/products/templates/advanced_search.html
@@ -7,214 +7,177 @@
 
 
 <body>
-    <!-- HEADER -->
-    {% include 'homepage_header.html' %}
+<!-- HEADER -->
+{% include 'homepage_header.html' %}
 
-    <!-- NAVIGATION -->
-    {% include 'homepage_navigation.html' %}
-    <!-- /NAVIGATION -->
+<!-- NAVIGATION -->
+{% include 'homepage_navigation.html' %}
+<!-- /NAVIGATION -->
 
-    <!-- BREADCRUMB -->
-    <div id="breadcrumb">
-        <div class="container">
-            <ul class="breadcrumb">
-                <li><a href="#">Home</a></li>
-                <li class="active">Products</li>
-            </ul>
-        </div>
+<!-- BREADCRUMB -->
+<div id="breadcrumb">
+    <div class="container">
+        <ul class="breadcrumb">
+            <li><a href="#">Home</a></li>
+            <li class="active">Products</li>
+        </ul>
     </div>
-    <!-- /BREADCRUMB -->
+</div>
+<!-- /BREADCRUMB -->
 
-    <!-- section -->
-    <div class="section">
-        <!-- container -->
-        <div class="container">
-            <!-- row -->
-            <div class="row">
+<!-- section -->
+<div class="section">
+    <!-- container -->
+    <div class="container">
+        <!-- row -->
+        <div class="row">
 
-                <!-- ASIDE -->
-                <div id="aside" class="col-md-3">
+            <!-- ASIDE -->
+            <div id="aside" class="col-md-3">
 
-                    <!-- aside widget -->
-                    <div class="aside">
-                        <h3 class="aside-title">Shop by:</h3>
+                <!-- aside widget -->
+                <div class="aside">
+                    <h3 class="aside-title">Shop by:</h3>
 
-                        <!-- the following ul class will be in a loop, contents will be changed dynamically -->
-                        <ul class="filter-list">
-                            <li><span class="text-uppercase">size:</span></li>
-                            <li><a href="#">X</a></li>
-                        </ul>
-                        <button class="primary-btn" id="clear-tags">Clear All</button>
-
-                    </div>
-
-                    <!-- aside widget -->
-                    <!-- price slider -->
-                    <div class="aside">
-                        <h3 class="aside-title">Filter by Price</h3>
-                        <div id="price-slider"></div>
-                    </div>
-                    <!-- aside widget -->
-                    <!--the following div class will be in a loop , insert_tag will be changed dynamically -->
-                    <div class="aside">
-
-                        <h3 class="aside-title">Filter by _insert_tag </h3>
-                        <ul class="list-links">
-                            <li><a href="#">foo</a></li>
-                        </ul>
-
-                    </div>
-                    <!-- aside widget -->
-                </div>
-                <!-- /ASIDE -->
-
-                <!-- MAIN -->
-                <div id="main" class="col-md-9">
-                    <!-- store top filter -->
-                    <div class="store-filter clearfix">
-
-                        <div class="pull-left">
-                            <div class="row-filter">
-                                <button class="view-button" onclick="listView()"><i class="fa fa-bars"></i>
-                                    List
-                                </button>
-                                <button class="view-button view-active" onclick="gridView()"><i
-                                        class="fa fa-th-large"></i>
-                                    Grid
-                                </button>
-                            </div>
-                            <div class="sort-filter">
-                                <span class="text-uppercase">Sort By:</span>
-                                <select class="input">
-                                    <option value="0">Position</option>
-                                    <option value="0">Price</option>
-                                    <option value="0">Rating</option>
-                                </select>
-                                <a href="#" class="main-btn icon-btn"><i class="fa fa-arrow-down"></i></a>
-                            </div>
-                        </div>
-
-                        <div class="pull-right">
-                            <div class="page-filter">
-                                <span class="text-uppercase">Show:</span>
-                                <select class="input">
-                                    <option value="0">10</option>
-                                    <option value="1">20</option>
-                                    <option value="2">30</option>
-                                </select>
-                            </div>
-                            <ul class="store-pages">
-                                <li><span class="text-uppercase">Page:</span></li>
-                                <li class="active">1</li>
-                                <li><a href="#">2</a></li>
-                                <li><a href="#">3</a></li>
-                                <li><a href="#"><i class="fa fa-caret-right"></i></a></li>
-                            </ul>
-                        </div>
-
-                    </div>
-
-                    <!-- /store top filter -->
-
-                    <!-- STORE -->
-                    <div id="store">
-                        <!-- row -->
-                        <div class="row">
-                            <!-- Product Single -->
-                            {% for product in products_list %}
-
-                            {% if forloop.counter <= products_one_page|getval %}
-                            <div class=" dummy2 col-md-4 col-sm-6 col-xs-6">
-                                <div class="product product-single">
-                                    <div class="product-thumb">
-                                        {% if product.image %}
-                                        <img src="{{ product.image.url }}" alt="" style="width: 250px; height: 250px;">
-                                        {% endif %}
-                                    </div>
-                                    <div class="product-body">
-                                        <h3 class="product-price">{{ product.price }}</h3>
-                                        <div class="product-rating">
-                                            {% for i in product.rating|getrange:0 %}
-                                            <i class="fa fa-star"></i>
-                                            {% endfor %}
-
-                                            {% for i in product.rating|getrange:5 %}
-                                            <i class="fa fa-star-o empty"></i>
-                                            {% endfor %}
-
-                                        </div>
-                                        <h2 class="product-name"><a href="#">{{ product.name }}</a></h2>
-                                        <div class="product-btns">
-                                            <button class="main-btn icon-btn"><i class="fa fa-heart"></i>
-                                            </button>
-                                            <button class="main-btn icon-btn"><i class="fa fa-exchange"></i>
-                                            </button>
-                                            <button class="primary-btn add-to-cart"><i class="fa fa-shopping-cart"></i>
-                                                Add to
-                                                Cart
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- /Product Single -->
-                            {% endif %}
-                            {% endfor %}
-                        </div>
-                        <!-- /row -->
-                    </div>
-                    <!-- /STORE -->
-                    <div class="row-filter">
-                        <button class="view-button" onclick="listView()"><i class="fa fa-bars"></i>
-                            List
-                        </button>
-                        <button class="view-button view-active" onclick="gridView()"><i class="fa fa-th-large"></i>
-                            Grid
-                        </button>
-                    </div>
-                    <div class="sort-filter">
-                        <span class="text-uppercase">Sort By:</span>
-                        <select class="input">
-                            <option value="0">Position</option>
-                            <option value="0">Price</option>
-                            <option value="0">Rating</option>
-                        </select>
-                        <a href="#" class="main-btn icon-btn"><i class="fa fa-arrow-down"></i></a>
-                    </div>
-                </div>
-
-                <div class="pull-right">
-                    <div class="page-filter">
-                        <span class="text-uppercase">Show:</span>
-                        <select class="input">
-                            <option value="0">10</option>
-                            <option value="1">20</option>
-                            <option value="2">30</option>
-                        </select>
-                    </div>
-                    <ul class="store-pages">
-                        <li><span class="text-uppercase">Page:</span></li>
-                        <li class="active">1</li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><a href="#"><i class="fa fa-caret-right"></i></a></li>
+                    <!-- the following ul class will be in a loop, contents will be changed dynamically -->
+                    <ul class="filter-list">
+                        <li><span class="text-uppercase">size:</span></li>
+                        <li><a href="#">X</a></li>
                     </ul>
+                    <button class="primary-btn" id="clear-tags">Clear All</button>
+
                 </div>
 
+                <!-- aside widget -->
+                <!-- price slider -->
+                <div class="aside">
+                    <h3 class="aside-title">Filter by Price</h3>
+                    <div id="price-slider"></div>
+                </div>
+                <!-- aside widget -->
+                <!--the following div class will be in a loop , insert_tag will be changed dynamically -->
+                <div class="aside">
+
+                    <h3 class="aside-title">Filter by _insert_tag </h3>
+                    <ul class="list-links">
+                        <li><a href="#">foo</a></li>
+                    </ul>
+
+                </div>
+                <!-- aside widget -->
             </div>
-            <!-- /store bottom filter -->
+            <!-- /ASIDE -->
+
+            <!-- MAIN -->
+            <div id="main" class="col-md-9">
+                <!-- store top filter -->
+                <div class="store-filter clearfix">
+
+                    <div class="pull-left">
+                        <div class="row-filter">
+                            <button class="view-button""><i class="fa fa-bars"></i>
+                                List
+                            </button>
+                            <button class="view-button view-active"><i
+                                    class="fa fa-th-large"></i>
+                                Grid
+                            </button>
+                        </div>
+                        <div class="sort-filter">
+                            <span class="text-uppercase">Sort By:</span>
+                            <select class="input">
+                                <option value="0">Position</option>
+                                <option value="0">Price</option>
+                                <option value="0">Rating</option>
+                            </select>
+                            <a href="#" class="main-btn icon-btn"><i class="fa fa-arrow-down"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="pull-right">
+                        <div class="page-filter">
+                            <span class="text-uppercase">Show:</span>
+                            <select class="input">
+                                <option value="0">10</option>
+                                <option value="1">20</option>
+                                <option value="2">30</option>
+                            </select>
+                        </div>
+                        <ul class="store-pages">
+                            <li><span class="text-uppercase">Page:</span></li>
+                            <li class="active">1</li>
+                            <li><a href="#">2</a></li>
+                            <li><a href="#">3</a></li>
+                            <li><a href="#"><i class="fa fa-caret-right"></i></a></li>
+                        </ul>
+                    </div>
+
+                </div>
+
+                <!-- /store top filter -->
+
+                <!-- STORE -->
+                <div id="store">
+                    <!-- row -->
+                    <div class="row">
+                        <!-- Product Single -->
+                        {% include 'category_page_product_info.html' %}
+
+                    </div>
+                    <!-- /row -->
+                </div>
+                <!-- /STORE -->
+                <div class="row-filter">
+                    <button class="view-button"><i class="fa fa-bars"></i>
+                        List
+                    </button>
+                    <button class="view-button view-active"><i class="fa fa-th-large"></i>
+                        Grid
+                    </button>
+                </div>
+                <div class="sort-filter">
+                    <span class="text-uppercase">Sort By:</span>
+                    <select class="input">
+                        <option value="0">Position</option>
+                        <option value="0">Price</option>
+                        <option value="0">Rating</option>
+                    </select>
+                    <a href="#" class="main-btn icon-btn"><i class="fa fa-arrow-down"></i></a>
+                </div>
+            </div>
+
+            <div class="pull-right">
+                <div class="page-filter">
+                    <span class="text-uppercase">Show:</span>
+                    <select class="input">
+                        <option value="0">10</option>
+                        <option value="1">20</option>
+                        <option value="2">30</option>
+                    </select>
+                </div>
+                <ul class="store-pages">
+                    <li><span class="text-uppercase">Page:</span></li>
+                    <li class="active">1</li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#"><i class="fa fa-caret-right"></i></a></li>
+                </ul>
+            </div>
+
         </div>
-        <!-- /MAIN -->
+        <!-- /store bottom filter -->
     </div>
-    <!-- /row -->
-    </div>
-    <!-- /container -->
-    </div>
-    <!-- /section -->
+    <!-- /MAIN -->
+</div>
+<!-- /row -->
+</div>
+<!-- /container -->
+</div>
+<!-- /section -->
 
-    {% include 'homepage_footer.html' %}
+{% include 'homepage_footer.html' %}
 
-    {% include 'homepage_js.html' %}
+{% include 'homepage_js.html' %}
 
 
 </body>
