--- a/products/templates/homepage_section_1.html
+++ b/products/templates/homepage_section_1.html
@@ -30,7 +30,7 @@
 
                         <div id="product-slick-1" class="product-slick">
                             <!-- Product Single -->
-                            {% include 'product_info.html' %}
+                            {% include 'homepage_product_info.html' %}
                             <!-- /Product Single -->
                         </div>
                     </div>
