--- a/products/templates/homepage_header.html
+++ b/products/templates/homepage_header.html
@@ -1,109 +1,111 @@
-
 {% block homepage_header %}
-{% load homepage_extras %}
-{% load static %}
-<!-- HEADER -->
-<header>
-    <!-- top Header -->
-    <div id="top-header">
-        <div class="container">
-            <div class="pull-left">
-                <span>Welcome to Online Product Locator!</span>
-            </div>
-            <div class="pull-right">
-                <ul class="header-top-links">
-                    <li><a href="{% url 'advanced_search'%}">Advanced Search</a></li>
-                    <li><a href="#">FAQ</a></li>
+    {% load homepage_extras %}
+    {% load static %}
+    <!-- HEADER -->
+    <header>
+        <!-- top Header -->
+        <div id="top-header">
+            <div class="container">
+                <div class="pull-left">
+                    <span>Welcome to Online Product Locator!</span>
+                </div>
+                <div class="pull-right">
+                    <ul class="header-top-links">
+                        <li><a>Advanced Search</a></li>
+                        <li><a href="#">FAQ</a></li>
 
-                </ul>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-    <!-- /top Header -->
+        <!-- /top Header -->
 
-    <!-- header -->
-    <div id="header">
-        <div class="container">
-            <div class="pull-left">
-                <!-- Logo -->
-                <div class="header-logo">
-                    <a class="logo" href="#">
-                        <img id = "img_logo" src="/media/img/mylogo.png" style=" width: 80px; height: 80px;">
-                    </a>
-                </div>
-                <!-- /Logo -->
-
-                <!-- Search -->
-                <div class="header-search">
-                    <form>
-                        <input class="input search-input" type="text" placeholder="Enter your keyword">
-                        <select class="input search-categories">
-
-                            {% for i in products_list|getcategory:"All Categories" %}
-                                <option value="{{forloop.counter}}"> {{i}} </option>
-                            {% endfor %}
-
-                        </select>
-                        <button class="search-btn"><i class="fa fa-search"></i></button>
-
-                    </form>
-                </div>
-                <!-- /Search -->
-            </div>
-            <div class="pull-right">
-                <ul class="header-btns">
-                    <!-- Account -->
-                    <li class="header-account dropdown default-dropdown">
-                        <div class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true">
-                            <div class="header-btns-icon">
-                                <i class="fa fa-user-o"></i>
-                            </div>
-                            <strong class="text-uppercase">My Account <i class="fa fa-caret-down"></i></strong>
-                        </div>
-                        <a href="{% url 'login_user' %}" class="text-uppercase">Sign in</a> / <a href="{% url 'logout_user' %}" class="text-uppercase">Sign out</a>
-                        <ul class="custom-menu">
-                            <li><a href="#"><i class="fa fa-user-o"></i> My Profile</a></li>
-                            <li><a href="#"><i class="fa fa-heart-o"></i> My Wishlist</a></li>
-                            <li><a href="#"><i class="fa fa-unlock-alt"></i> Login</a></li>
-                            <li><a href="#"><i class="fa fa-user-plus"></i> Create An Account</a></li>
-                        </ul>
-                    </li>
-                    <!-- /Account -->
-
-                    <!-- Cart -->
-                    <li class="header-cart dropdown default-dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
-                            <div class="header-btns-icon">
-                                <i class="fa fa-shopping-cart"></i>
-                                <span class="qty">0</span>
-                            </div>
-                            <strong class="text-uppercase">My Cart</strong>
-                            <br>
+        <!-- header -->
+        <div id="header">
+            <div class="container">
+                <div class="pull-left">
+                    <!-- Logo -->
+                    <div class="header-logo">
+                        <a class="logo" href="#">
+                            <img id="img_logo" src="/media/img/mylogo.png" style=" width: 80px; height: 80px;">
                         </a>
-                        <div class="custom-menu">
-                            <div id="shopping-cart">
-                                <div class="shopping-cart-btns">
-                                    <button class="main-btn">View Cart</button>
-                                    <button class="primary-btn">Checkout <i class="fa fa-arrow-circle-right"></i>
-                                    </button>
+                    </div>
+                    <!-- /Logo -->
+
+                    <!-- Search -->
+                    <div class="header-search">
+                        <form>
+                            <input class="input search-input" type="text" placeholder="Enter your keyword">
+                            <select class="input search-categories">
+
+                                <option selected disabled>Select Category</option>
+
+                                {% for i in category_list %}
+                                    <option value="{{ forloop.counter }}"> {{ i.category }} </option>
+                                {% endfor %}
+
+                            </select>
+                            <button class="search-btn"><i class="fa fa-search"></i></button>
+
+                        </form>
+                    </div>
+                    <!-- /Search -->
+                </div>
+                <div class="pull-right">
+                    <ul class="header-btns">
+                        <!-- Account -->
+                        <li class="header-account dropdown default-dropdown">
+                            <div class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true">
+                                <div class="header-btns-icon">
+                                    <i class="fa fa-user-o"></i>
+                                </div>
+                                <strong class="text-uppercase">My Account <i class="fa fa-caret-down"></i></strong>
+                            </div>
+                            <a href="{% url 'login_user' %}" class="text-uppercase">Sign in</a> / <a
+                                href="{% url 'logout_user' %}" class="text-uppercase">Sign out</a>
+                            <ul class="custom-menu">
+                                <li><a href="#"><i class="fa fa-user-o"></i> My Profile</a></li>
+                                <li><a href="#"><i class="fa fa-heart-o"></i> My Wishlist</a></li>
+                                <li><a href="#"><i class="fa fa-unlock-alt"></i> Login</a></li>
+                                <li><a href="#"><i class="fa fa-user-plus"></i> Create An Account</a></li>
+                            </ul>
+                        </li>
+                        <!-- /Account -->
+
+                        <!-- Cart -->
+                        <li class="header-cart dropdown default-dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
+                                <div class="header-btns-icon">
+                                    <i class="fa fa-shopping-cart"></i>
+                                    <span class="qty">0</span>
+                                </div>
+                                <strong class="text-uppercase">My Cart</strong>
+                                <br>
+                            </a>
+                            <div class="custom-menu">
+                                <div id="shopping-cart">
+                                    <div class="shopping-cart-btns">
+                                        <button class="main-btn">View Cart</button>
+                                        <button class="primary-btn">Checkout <i class="fa fa-arrow-circle-right"></i>
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </li>
-                    <!-- /Cart -->
+                        </li>
+                        <!-- /Cart -->
 
-                    <!-- Mobile nav toggle-->
-                    <li class="nav-toggle">
-                        <button class="nav-toggle-btn main-btn icon-btn"><i class="fa fa-bars"></i></button>
-                    </li>
-                    <!-- / Mobile nav toggle -->
-                </ul>
+                        <!-- Mobile nav toggle-->
+                        <li class="nav-toggle">
+                            <button class="nav-toggle-btn main-btn icon-btn"><i class="fa fa-bars"></i></button>
+                        </li>
+                        <!-- / Mobile nav toggle -->
+                    </ul>
+                </div>
             </div>
+            <!-- header -->
         </div>
-        <!-- header -->
-    </div>
-    <!-- container -->
-</header>
-<!-- HEADER -->
+        <!-- container -->
+    </header>
+    <!-- HEADER -->
 
 {% endblock %}
