--- a/products/templates/homepage_navigation.html
+++ b/products/templates/homepage_navigation.html
@@ -35,7 +35,7 @@
 
                                                 {% for categorys in super_category_dictionary.category_list %}
                                                     <li class = "cat_name">
-                                                        <a>{{ categorys }}</a>
+                                                        <a href="{% url 'advanced_search' categorys %}">{{ categorys }}</a>
                                                     </li>
                                                 {% endfor %}
 
@@ -60,7 +60,7 @@
             <div class="menu-nav">
                 <span class="menu-header">Menu <i class="fa fa-bars"></i></span>
                 <ul class="menu-list">
-                    <li><a href={% url 'initial_page' %}>Home</a></li>
+                    <li><a href={% url 'homepage' %}>Home</a></li>
                     {% for top_category_dictionary in top_category_list %}
 
                         <li class="dropdown mega-dropdown"><a class="dropdown-toggle" data-toggle="dropdown"
@@ -80,7 +80,7 @@
 
                                                 {% for categorys in super_category_dictionary.category_list %}
                                                     <li class = "cat_name">
-                                                        <a>{{ categorys }}</a>
+                                                        <a href="{% url 'advanced_search' categorys %}">{{ categorys }}</a>
                                                     </li>
                                                 {% endfor %}
 
